--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,3 +11,5 @@
 <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet">
 {% endif %}
 {% include favicons.html %}
+<script src="https://use.typekit.net/haz4qyi.js"></script>
+<script>try{Typekit.load({ async: true });}catch(e){}</script>
