--- a/assets/styles/style/components/input-clear.scss
+++ b/assets/styles/style/components/input-clear.scss
@@ -1,14 +1,14 @@
 [data-input="clear"] {
   pointer-events: auto;
-  color: $main-gray-light;
+  color: $gray-light;
 
   &:hover,
   &:active {
-    color: $main-red;
+    color: $brand-danger;
   }
 
   &:focus {
     outline: none;
-    color: $main-gray-light;
+    color: $gray-light;
   }
 }
