--- a/assets/styles/variables/_main.scss
+++ b/assets/styles/variables/_main.scss
@@ -1,5 +1,5 @@
-@import "_app";
+@import "app";
 
 // VENDORS
-@import "_bootstrap";
-@import "_font-awesome";
+@import "bootstrap";
+@import "font-awesome";
