--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,15 +1,11 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-<meta name="description" content="Studiocraft Homepage">
-<meta name="keywords" content="Stduiocraft">
+<meta name="description" content="Studiocraft">
+<meta name="keywords" content="Studiocraft">
 <meta name="author" content="Bryan Colosky">
-<title>{{ page.title }}</title>
-{% if site.github %}
-<link href="{{ site.baseurl }}/assets/css/main.min.css" rel="stylesheet">
-{% else %}
+<title>{{ site.title }}</title>
 <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet">
-{% endif %}
 {% include favicons.html %}
 <script src="https://use.typekit.net/haz4qyi.js"></script>
 <script>try{Typekit.load({ async: true });}catch(e){}</script>
