--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8046,7 +8046,8 @@ html, body {
   padding: 0; }
 
 body {
-  font-weight: 300; }
+  font-weight: 300;
+  letter-spacing: 1px; }
 
 main {
   height: 100%; }
@@ -8092,10 +8093,14 @@ main {
 
 .banner {
   height: 100%;
-  background-image: url("../images/banner.jpg");
   background-size: cover;
+  background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed; }
+  .banner.bg1 {
+    background-image: url("../images/micro-chip.jpg"); }
+  .banner.bg2 {
+    background-image: url("../images/new-york.jpg"); }
 
 .overlay {
   background-color: rgba(0, 105, 145, 0.75); }
