--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,5 @@
-<script src="{{ site.baseurl }}/assets/js/vendors/jquery.js"></script>
-<script src="{{ site.baseurl }}/assets/js/vendors/respond.src.js"></script>
-<script src="{{ site.baseurl }}/assets/js/main.js"></script>
+<hr>
+<footer class="container">
+  <p class="pull-right"><a href="#{{ page.slug }}" data-scroll='animate'><i class="fa fa-fw fa-angle-up"></i>Back to top</a></p>
+  <p><i class="fa fa-copyright"></i>2015 Studiocraft</p>
+</footer>
