--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,10 +3,15 @@
 <head>
 {% include head.html %}
 </head>
-<body id="{{ page.slug }}">
-	<main id="content">
-		{{ content }}
-		{% include footer.html %}
-	</main>
-</body>
+
+<body id="{{ page.slug }}" class="container-fluid">
+  <main id="content" class="row">
+    {{ content }}
+    {% include footer.html %}
+    </main>
+  </body>
+  <script type="text/javascript" src="{{ site.baseurl }}/assets/js/vendors/jquery.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/assets/js/vendors/respond.src.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/assets/js/vendors/bootstrap.min.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/assets/js/main.js"></script>
 </html>
