--- a/assets/styles/variables/_bootstrap.scss
+++ b/assets/styles/variables/_bootstrap.scss
@@ -396,7 +396,7 @@ $navbar-default-toggle-border-color:       #ddd;
 //=== Inverted navbar
 // Reset inverted navbar basics
 $navbar-inverse-color:                      lighten($gray-light, 15%);
-$navbar-inverse-bg:                         #222;
+$navbar-inverse-bg:                         transparentize($brand-primary, .5);
 $navbar-inverse-border:                     darken($navbar-inverse-bg, 10%);
 
 // Inverted navbar links
