--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,145 +1,18 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<meta name="description" content="Studiocraft">
-<meta name="keywords" content="Studiocraft">
+<meta name="description" content="{{ site.summary | truncate:140 }}">
+<meta name="keywords" content="{{ site.keywords }}">
 <meta name="author" content="Bryan Colosky">
 <title>{{ site.title }}</title>
-<link href="{{ site.baseurl }}/assets/css/app.css" rel="stylesheet">
-<link href="{{ site.baseurl }}/assets/css/vendors/animate.css" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css" rel="stylesheet">
+{% if site.github %}
+<link href="{{ site.baseurl }}dist/css/main.min.css" rel="stylesheet">
+{% else %}
+<link href="{{ site.baseurl }}assets/css/app.css" rel="stylesheet">
+{% endif %}
 <script src="https://use.typekit.net/haz4qyi.js"></script>
 <script>try{Typekit.load({ async: true });}catch(e){}</script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<link rel="apple-touch-icon" sizes="57x57" href="{{ site.baseurl }}/assets/images/favicons/apple-touch-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="{{ site.baseurl }}/assets/images/favicons/apple-touch-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="{{ site.baseurl }}/assets/images/favicons/apple-touch-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="{{ site.baseurl }}/assets/images/favicons/apple-touch-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="{{ site.baseurl }}/assets/images/favicons/apple-touch-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="{{ site.baseurl }}/assets/images/favicons/apple-touch-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="{{ site.baseurl }}/assets/images/favicons/apple-touch-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="{{ site.baseurl }}/assets/images/favicons/apple-touch-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/assets/images/favicons/apple-touch-icon-180x180.png">
-<link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 736px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 3)" href="{{ site.baseurl }}/assets/images/favicons/apple-touch-startup-image-1182x2208.png">
-<link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 736px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 3)" href="{{ site.baseurl }}/assets/images/favicons/apple-touch-startup-image-1242x2148.png">
-<link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2)" href="{{ site.baseurl }}/assets/images/favicons/apple-touch-startup-image-1496x2048.png">
-<link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)" href="{{ site.baseurl }}/assets/images/favicons/apple-touch-startup-image-1536x2008.png">
-<link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 480px) and (-webkit-device-pixel-ratio: 1)" href="{{ site.baseurl }}/assets/images/favicons/apple-touch-startup-image-320x460.png">
-<link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" href="{{ site.baseurl }}/assets/images/favicons/apple-touch-startup-image-640x1096.png">
-<link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 480px) and (-webkit-device-pixel-ratio: 2)" href="{{ site.baseurl }}/assets/images/favicons/apple-touch-startup-image-640x920.png">
-<link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 1)" href="{{ site.baseurl }}/assets/images/favicons/apple-touch-startup-image-748x1024.png">
-<link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)" href="{{ site.baseurl }}/assets/images/favicons/apple-touch-startup-image-750x1294.png">
-<link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 1)" href="{{ site.baseurl }}/assets/images/favicons/apple-touch-startup-image-768x1004.png">
-<link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/images/favicons/favicon-32x32.png" sizes="32x32">
-<link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/images/favicons/favicon-230x230.png" sizes="230x230">
-<link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/images/favicons/favicon-96x96.png" sizes="96x96">
-<link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/images/favicons/android-chrome-192x192.png" sizes="192x192">
-<link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/images/favicons/coast-228x228.png" sizes="228x228">
-<link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/images/favicons/favicon-16x16.png" sizes="16x16">
-<link rel="manifest" href="{{ site.baseurl }}/assets/images/favicons/manifest.json">
-<link rel="shortcut icon" href="{{ site.baseurl }}/assets/images/favicons/favicon.ico">
-<link rel="yandex-tableau-widget" href="{{ site.baseurl }}/assets/images/favicons/yandex-browser-manifest.json">
-<meta property="og:image" content="{{ site.baseurl }}/assets/images/favicons/open-graph.png">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="msapplication-TileColor" content="transparent">
-<meta name="msapplication-TileImage" content="{{ site.baseurl }}/assets/images/favicons/mstile-144x144.png">
-<meta name="msapplication-config" content="{{ site.baseurl }}/assets/images/favicons/browserconfig.xml">
-<meta name="theme-color" content="transparent">
+{% include favicons.html %}
