--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer>
+<footer class="animated fadeInUp">
   <small>Built with <i class="fa fa-fw fa-heart"></i> in New York City.</small><br>
   <small>Copyright <i class="fa fa-fw fa-copyright"></i>{{ site.time | date: "%Y" }} Studiocraft. All rights reserved.</small>
 </footer>
