--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -8,8 +8,9 @@ body {
   height: 100%; }
 
 html {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "proxima-nova",sans-serif;
   font-size: 1rem;
+  font-weight: 300;
   line-height: 1.4; }
   @media (min-width: 38em) {
     html {
