--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -16,8 +16,9 @@ body {
 }
 
 html {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "proxima-nova",sans-serif;
   font-size: 1rem;
+  font-weight: 300;
   line-height: 1.4;
 
   @media (min-width: 38em) {
