--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -179,20 +179,24 @@ button {
   line-height: 1.4;
   text-align: center;
   text-transform: uppercase;
-  letter-spacing: .1rem;
   white-space: nowrap;
   vertical-align: middle;
   -ms-touch-action: manipulation;
-  touch-action: manipulation;
+      touch-action: manipulation;
   cursor: pointer;
   -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
   background-image: none;
   background-color: transparent;
-  border: .1rem solid #444444;
-  border-radius: 1.8rem; }
+  border: .15rem solid #444444;
+  border-radius: 1.8rem;
+  transition: color .4s, border-color .4s; }
+  @media (min-width: 38em) {
+    .button,
+    button {
+      letter-spacing: .1rem; } }
 
 input[type='submit'], input[type='reset'], input[type='button'] {
   display: inline-block;
@@ -204,31 +208,36 @@ input[type='submit'], input[type='reset'], input[type='button'] {
   line-height: 1.4;
   text-align: center;
   text-transform: uppercase;
-  letter-spacing: .1rem;
   white-space: nowrap;
   vertical-align: middle;
   -ms-touch-action: manipulation;
-  touch-action: manipulation;
+      touch-action: manipulation;
   cursor: pointer;
   -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
   background-image: none;
   background-color: transparent;
-  border: .1rem solid #444444;
-  border-radius: 1.8rem; }
+  border: .15rem solid #444444;
+  border-radius: 1.8rem;
+  transition: color .4s, border-color .4s; }
+  @media (min-width: 38em) {
+    input[type='submit'], input[type='reset'], input[type='button'] {
+      letter-spacing: .1rem; } }
 
 .button:hover,
 button:hover {
   text-decoration: none;
   color: #FFFFFF;
-  border-color: #FFFFFF; }
+  border-color: #FFFFFF;
+  transition: color .4s, border-color .4s; }
 
 input[type='submit']:hover, input[type='reset']:hover, input[type='button']:hover {
   text-decoration: none;
   color: #FFFFFF;
-  border-color: #FFFFFF; }
+  border-color: #FFFFFF;
+  transition: color .4s, border-color .4s; }
 
 .button:focus,
 button:focus {
