--- a/assets/styles/buttons.scss
+++ b/assets/styles/buttons.scss
@@ -9,20 +9,20 @@ button {
   line-height: 1.4;
   text-align: center;
   text-transform: uppercase;
-  letter-spacing: .1rem;
   white-space: nowrap;
   vertical-align: middle;
-  -ms-touch-action: manipulation;
   touch-action: manipulation;
   cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none;
   background-image: none;
   background-color: transparent;
-  border: .1rem solid #444444;
+  border: .15rem solid #444444;
   border-radius: 1.8rem;
+  transition: color .4s, border-color .4s;
+
+  @media (min-width: 38em) {
+    letter-spacing: .1rem;
+  }
 }
 
 input {
@@ -38,20 +38,20 @@ input {
     line-height: 1.4;
     text-align: center;
     text-transform: uppercase;
-    letter-spacing: .1rem;
     white-space: nowrap;
     vertical-align: middle;
-    -ms-touch-action: manipulation;
     touch-action: manipulation;
     cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
     user-select: none;
     background-image: none;
     background-color: transparent;
-    border: .1rem solid #444444;
+    border: .15rem solid #444444;
     border-radius: 1.8rem;
+    transition: color .4s, border-color .4s;
+
+    @media (min-width: 38em) {
+      letter-spacing: .1rem;
+    }
   }
 }
 
@@ -60,6 +60,7 @@ button:hover {
   text-decoration: none;
   color: #FFFFFF;
   border-color: #FFFFFF;
+  transition: color .4s, border-color .4s;
 }
 
 input {
@@ -69,6 +70,7 @@ input {
     text-decoration: none;
     color: #FFFFFF;
     border-color: #FFFFFF;
+    transition: color .4s, border-color .4s;
   }
 }
 
