--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,14 +23,16 @@ html {
 }
 
 body {
-  color: #333333;
+  color: #FF4136;
   background-color: #111111;
+  -webkit-animation: hue 60s infinite linear;
+          animation: hue 60s infinite linear;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
 
 a {
-  color: #444444;
+  color: inherit;
   text-decoration: none;
 }
 a:hover,
@@ -47,9 +49,10 @@ img {
   margin: 0 auto;
 }
 
-img.logo {
+svg {
   padding-top: 3rem;
   max-width: 24rem;
+  fill: #FF4136;
 }
 
 table {
@@ -224,8 +227,7 @@ button {
   display: inline-block;
   padding: 1rem 1.6rem;
   margin-bottom: 0;
-  color: #444444;
-  font-size: 1rem;
+  color: inherit;
   font-weight: bold;
   line-height: 1.4;
   text-align: center;
@@ -241,9 +243,8 @@ button {
           user-select: none;
   background-image: none;
   background-color: transparent;
-  border: 0.15rem solid #444444;
+  border: 0.15rem solid #FF4136;
   border-radius: 1.8rem;
-  transition: color 0.4s, border-color 0.4s;
 }
 @media (min-width: 38em) {
   .button,
@@ -258,8 +259,7 @@ input[type='button'] {
   display: inline-block;
   padding: 1rem 1.6rem;
   margin-bottom: 0;
-  color: #444444;
-  font-size: 1rem;
+  color: inherit;
   font-weight: bold;
   line-height: 1.4;
   text-align: center;
@@ -275,9 +275,8 @@ input[type='button'] {
           user-select: none;
   background-image: none;
   background-color: transparent;
-  border: 0.15rem solid #444444;
+  border: 0.15rem solid #FF4136;
   border-radius: 1.8rem;
-  transition: color 0.4s, border-color 0.4s;
 }
 @media (min-width: 38em) {
   input[type='submit'],
@@ -290,25 +289,26 @@ input[type='button'] {
 .button:hover,
 button:hover {
   text-decoration: none;
-  color: #FFFFFF;
-  border-color: #FFFFFF;
-  transition: color 0.4s, border-color 0.4s;
+  color: inherit;
+  -webkit-filter: brightness(2);
+          filter: brightness(2);
 }
 
 input[type='submit']:hover,
 input[type='reset']:hover,
 input[type='button']:hover {
   text-decoration: none;
-  color: #FFFFFF;
-  border-color: #FFFFFF;
-  transition: color 0.4s, border-color 0.4s;
+  color: inherit;
+  -webkit-filter: brightness(2);
+          filter: brightness(2);
 }
 
 .button:focus,
 button:focus {
   text-decoration: none;
-  color: #FFFFFF;
-  border-color: #FFFFFF;
+  color: inherit;
+  -webkit-filter: brightness(2);
+          filter: brightness(2);
   outline: 0;
 }
 
@@ -316,9 +316,32 @@ input[type='submit']:focus,
 input[type='reset']:focus,
 input[type='button']:focus {
   text-decoration: none;
-  color: #FFFFFF;
-  border-color: #FFFFFF;
+  color: inherit;
+  -webkit-filter: brightness(2);
+          filter: brightness(2);
   outline: 0;
+}
+
+@-webkit-keyframes hue {
+  from {
+    -webkit-filter: hue-rotate(0deg);
+            filter: hue-rotate(0deg);
+  }
+  to {
+    -webkit-filter: hue-rotate(-360deg);
+            filter: hue-rotate(-360deg);
+  }
+}
+
+@keyframes hue {
+  from {
+    -webkit-filter: hue-rotate(0deg);
+            filter: hue-rotate(0deg);
+  }
+  to {
+    -webkit-filter: hue-rotate(-360deg);
+            filter: hue-rotate(-360deg);
+  }
 }
 
 
