--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -4,3 +4,13 @@
 @import 'layout';
 
 @import 'buttons';
+
+@keyframes hue {
+  from {
+    filter: hue-rotate(0deg);
+  }
+
+  to {
+    filter: hue-rotate(-360deg);
+  }
+}
