--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -28,15 +28,16 @@ html {
 }
 
 body {
-  color: #333333;
+  color: #FF4136;
   background-color: #111111;
+  animation: hue 60s infinite linear;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
 
 // No `:visited` state is required by default (browsers will use `a`)
 a {
-  color: #444444;
+  color: inherit;
   text-decoration: none;
 
   // `:focus` is linked to `:hover` for basic accessibility
@@ -57,23 +58,26 @@ img {
   margin: 0 auto;
 }
 
-img.logo {
+svg {
   padding-top: 3rem;
   max-width: 24rem;
+  fill: #FF4136;
 }
 
 // Tables
 table {
   margin-bottom: 1rem;
   width: 100%;
-  border: 1px solid #e5e5e5;
+  border: 1px solid #E5E5E5;
   border-collapse: collapse;
 }
+
 td,
 th {
   padding: .25rem .5rem;
   border: 1px solid #e5e5e5;
 }
+
 tbody tr:nth-child(odd) td,
 tbody tr:nth-child(odd) th {
   background-color: #f9f9f9;
