--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -38,7 +38,7 @@ img {
   max-width: 100%;
   margin: 0 auto; }
 
-svg {
+object {
   padding-top: 3rem;
   max-width: 24rem;
   fill: #FF4136; }
@@ -62,7 +62,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: .5rem;
   font-weight: bold;
   line-height: 1.25;
-  color: #1A1A1A;
+  color: inherit;
   text-rendering: optimizeLegibility; }
 
 h1 {
@@ -88,9 +88,10 @@ small {
   font-size: .8rem; }
 
 strong {
-  color: #222222; }
+  color: inherit; }
 
 ul, ol, dl {
+  color: inherit;
   margin-top: 0;
   margin-bottom: 1rem; }
 
