--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -255,18 +255,18 @@ input[type='submit']:focus, input[type='reset']:focus, input[type='button']:focu
   outline: 0; }
 
 @-webkit-keyframes hue {
-  from {
+  0% {
     -webkit-filter: hue-rotate(0deg);
             filter: hue-rotate(0deg); }
-  to {
+  100% {
     -webkit-filter: hue-rotate(-360deg);
             filter: hue-rotate(-360deg); } }
 
 @keyframes hue {
-  from {
+  0% {
     -webkit-filter: hue-rotate(0deg);
             filter: hue-rotate(0deg); }
-  to {
+  100% {
     -webkit-filter: hue-rotate(-360deg);
             filter: hue-rotate(-360deg); } }
 
