--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -324,22 +324,22 @@ input[type='button']:focus {
 }
 
 @-webkit-keyframes hue {
-  from {
+  0% {
     -webkit-filter: hue-rotate(0deg);
             filter: hue-rotate(0deg);
   }
-  to {
+  100% {
     -webkit-filter: hue-rotate(-360deg);
             filter: hue-rotate(-360deg);
   }
 }
 
 @keyframes hue {
-  from {
+  0% {
     -webkit-filter: hue-rotate(0deg);
             filter: hue-rotate(0deg);
   }
-  to {
+  100% {
     -webkit-filter: hue-rotate(-360deg);
             filter: hue-rotate(-360deg);
   }
