--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,10 @@
 <footer class="animated fadeInUp">
-  <small>Built with <i class="fa fa-fw fa-heart"></i> in New York City.</small><br>
-  <small>Copyright <i class="fa fa-fw fa-copyright"></i>{{ site.time | date: "%Y" }} Studiocraft. All rights reserved.</small>
+  <small><i class="fa fa-fw fa-code"></i> with <i class="fa fa-fw fa-heart"></i> in New York City.</small><br>
+  <small>Copyright<i class="fa fa-fw fa-copyright"></i>{{ site.time | date: "%Y" }} Studiocraft. All rights reserved.</small>
 </footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/nanobar/0.2.1/nanobar.min.js"></script>
 {% if site.github %}
 <script src="{{ site.baseurl }}dist/js/main.min.js"></script>
 {% else %}
