--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -8,55 +8,47 @@ body {
   height: 100%; }
 
 html {
-  font-family: "proxima-nova",sans-serif;
-  font-size: 1rem;
-  font-weight: 300;
-  line-height: 1.4; }
+  font-family: "source-code-pro",sans-serif;
+  font-size: 1.4rem;
+  line-height: 1.8; }
   @media (min-width: 38em) {
     html {
-      font-size: 1.4rem;
-      line-height: 1.8; } }
+      font-size: 1rem;
+      line-height: 1.4; } }
 
 body {
-  color: #FF4136;
+  color: #333333;
   background-color: #111111;
-  -webkit-animation: hue 60s infinite linear;
-          animation: hue 60s infinite linear;
+  text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%; }
 
 a {
   color: inherit;
-  text-decoration: none; }
+  font-weight: 700;
+  letter-spacing: .1rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  -webkit-transition: .4s;
+  transition: .4s; }
   a:hover, a:focus {
-    text-decoration: underline; }
-  a strong {
-    color: inherit; }
+    color: #444444;
+    text-decoration: none;
+    -webkit-transition: .4s;
+    transition: .4s; }
 
 img {
   display: block;
   max-width: 100%;
   margin: 0 auto; }
+  img.logo {
+    display: inline-block;
+    max-width: 18rem;
+    margin: 0; }
 
-object {
-  padding-top: 3rem;
-  max-width: 24rem;
-  fill: #FF4136; }
-
-table {
-  margin-bottom: 1rem;
-  width: 100%;
-  border: 1px solid #E5E5E5;
-  border-collapse: collapse; }
-
-td,
-th {
-  padding: .25rem .5rem;
-  border: 1px solid #e5e5e5; }
-
-tbody tr:nth-child(odd) td,
-tbody tr:nth-child(odd) th {
-  background-color: #f9f9f9; }
+hr {
+  border: #FFFF00 solid .6rem;
+  margin: 1.6rem 0; }
 
 h1, h2, h3, h4, h5, h6 {
   margin-bottom: .5rem;
@@ -85,71 +77,23 @@ p {
   margin-bottom: 1rem; }
 
 small {
-  font-size: .8rem; }
+  font-size: 90%; }
 
 strong {
   color: inherit; }
 
 ul, ol, dl {
-  color: #FF4136;
   margin-top: 0;
   margin-bottom: 1rem; }
 
-.inline {
+ul, ol {
   list-style: none;
-  margin-left: -.4rem;
-  margin-right: 0;
-  margin-top: 1.6rem;
-  margin-bottom: 1.6rem;
+  margin: 0;
   padding: 0; }
 
-.inline > li {
-  display: inline-block;
-  padding-left: .4rem; }
-
-dt {
-  font-weight: bold; }
-
-dd {
-  margin-bottom: .5rem; }
-
-hr {
-  position: relative;
-  margin: 1.5rem 0;
-  border: 0;
-  border-top: 1px solid #eee;
-  border-bottom: 1px solid #fff; }
-
-abbr {
-  font-size: 85%;
-  font-weight: bold;
-  color: #555;
-  text-transform: uppercase; }
-
-abbr[title] {
-  cursor: help;
-  border-bottom: 1px dotted #e5e5e5; }
-
-/* Quotes */
-blockquote {
-  padding: .5rem 1rem;
-  margin: .8rem 0;
-  color: #7a7a7a;
-  border-left: .25rem solid #e5e5e5; }
-  @media (min-width: 30em) {
-    blockquote {
-      padding-right: 5rem;
-      padding-left: 1.25rem; } }
-
-blockquote p:last-child {
-  margin-bottom: 0; }
-
-.lead {
-  font-size: 1.25rem;
-  font-weight: 300; }
-
 main {
-  max-width: 38rem;
+  position: relative;
+  max-width: 160rem;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
   margin-bottom: -3.6rem;
@@ -157,20 +101,23 @@ main {
   margin-right: auto;
   min-height: 100%; }
 
-main:after {
+main::after {
   content: "";
   display: block; }
 
 section {
-  text-align: center; }
+  position: absolute;
+  bottom: 4.2rem; }
 
-footer, main:after {
+footer, main::after {
   height: 3.6rem; }
 
 footer {
   height: 3.6rem;
   width: 100%;
-  text-align: center; }
+  max-width: 160rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem; }
 
 .button,
 button {
@@ -193,7 +140,7 @@ button {
           user-select: none;
   background-image: none;
   background-color: transparent;
-  border: .15rem solid #FF4136;
+  border: .15rem solid #222222;
   border-radius: 1.8rem; }
   @media (min-width: 38em) {
     .button,
@@ -220,7 +167,7 @@ input[type='submit'], input[type='reset'], input[type='button'] {
           user-select: none;
   background-image: none;
   background-color: transparent;
-  border: .15rem solid #FF4136;
+  border: .15rem solid #222222;
   border-radius: 1.8rem; }
   @media (min-width: 38em) {
     input[type='submit'], input[type='reset'], input[type='button'] {
@@ -229,46 +176,22 @@ input[type='submit'], input[type='reset'], input[type='button'] {
 .button:hover,
 button:hover {
   text-decoration: none;
-  color: inherit;
-  -webkit-filter: brightness(2);
-          filter: brightness(2); }
+  color: inherit; }
 
 input[type='submit']:hover, input[type='reset']:hover, input[type='button']:hover {
   text-decoration: none;
-  color: inherit;
-  -webkit-filter: brightness(2);
-          filter: brightness(2); }
+  color: inherit; }
 
 .button:focus,
 button:focus {
   text-decoration: none;
   color: inherit;
-  -webkit-filter: brightness(2);
-          filter: brightness(2);
   outline: 0; }
 
 input[type='submit']:focus, input[type='reset']:focus, input[type='button']:focus {
   text-decoration: none;
   color: inherit;
-  -webkit-filter: brightness(2);
-          filter: brightness(2);
   outline: 0; }
-
-@-webkit-keyframes hue {
-  0% {
-    -webkit-filter: hue-rotate(0deg);
-            filter: hue-rotate(0deg); }
-  100% {
-    -webkit-filter: hue-rotate(-360deg);
-            filter: hue-rotate(-360deg); } }
-
-@keyframes hue {
-  0% {
-    -webkit-filter: hue-rotate(0deg);
-            filter: hue-rotate(0deg); }
-  100% {
-    -webkit-filter: hue-rotate(-360deg);
-            filter: hue-rotate(-360deg); } }
 
 
 
