--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,227 +1,123 @@
 * {
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 html,
 body {
   margin: 0;
   padding: 0;
-  height: 100%;
-}
+  height: 100%; }
 
 html {
-  font-family: 'proxima-nova',sans-serif;
-  font-size: 1rem;
-  font-weight: 300;
-  line-height: 1.4;
-}
-@media (min-width: 38em) {
-  html {
-    font-size: 1.4rem;
-    line-height: 1.8;
-  }
-}
+  font-family: "source-code-pro",sans-serif;
+  font-size: 1.4rem;
+  line-height: 1.8; }
+  @media (min-width: 38em) {
+    html {
+      font-size: 1rem;
+      line-height: 1.4; } }
 
 body {
-  color: #FF4136;
+  color: #333333;
   background-color: #111111;
-  -webkit-animation: hue 60s infinite linear;
-          animation: hue 60s infinite linear;
+  text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-      -ms-text-size-adjust: 100%;
-}
+  -ms-text-size-adjust: 100%; }
 
 a {
   color: inherit;
+  font-weight: 700;
+  letter-spacing: .1rem;
+  text-transform: uppercase;
   text-decoration: none;
-}
-a:hover,
-a:focus {
-  text-decoration: underline;
-}
-a strong {
-  color: inherit;
-}
+  -webkit-transition: .4s;
+  transition: .4s; }
+  a:hover, a:focus {
+    color: #444444;
+    text-decoration: none;
+    -webkit-transition: .4s;
+    transition: .4s; }
 
 img {
   display: block;
   max-width: 100%;
-  margin: 0 auto;
-}
+  margin: 0 auto; }
+  img.logo {
+    display: inline-block;
+    max-width: 18rem;
+    margin: 0; }
 
-object {
-  padding-top: 3rem;
-  max-width: 24rem;
-  fill: #FF4136;
-}
+hr {
+  border: #FFFF00 solid .6rem;
+  margin: 1.6rem 0; }
 
-table {
-  margin-bottom: 1rem;
-  width: 100%;
-  border: 1px solid #E5E5E5;
-  border-collapse: collapse;
-}
-
-td,
-th {
-  padding: 0.25rem 0.5rem;
-  border: 1px solid #E5E5E5;
-}
-
-tbody tr:nth-child(odd) td,
-tbody tr:nth-child(odd) th {
-  background-color: #F9F9F9;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin-bottom: 0.5rem;
+h1, h2, h3, h4, h5, h6 {
+  margin-bottom: .5rem;
   font-weight: bold;
   line-height: 1.25;
   color: inherit;
-  text-rendering: optimizeLegibility;
-}
+  text-rendering: optimizeLegibility; }
 
 h1 {
-  font-size: 2rem;
-}
+  font-size: 2rem; }
 
 h2 {
   margin-top: 1rem;
-  font-size: 1.5rem;
-}
+  font-size: 1.5rem; }
 
 h3 {
   margin-top: 1.5rem;
-  font-size: 1.25rem;
-}
+  font-size: 1.25rem; }
 
-h4,
-h5,
-h6 {
+h4, h5, h6 {
   margin-top: 1rem;
-  font-size: 1rem;
-}
+  font-size: 1rem; }
 
 p {
   margin-top: 0;
-  margin-bottom: 1rem;
-}
+  margin-bottom: 1rem; }
 
 small {
-  font-size: 0.8rem;
-}
+  font-size: 90%; }
 
 strong {
-  color: inherit;
-}
+  color: inherit; }
 
-ul,
-ol,
-dl {
-  color: #FF4136;
+ul, ol, dl {
   margin-top: 0;
-  margin-bottom: 1rem;
-}
+  margin-bottom: 1rem; }
 
-.inline {
+ul, ol {
   list-style: none;
-  margin-left: -0.4rem;
-  margin-right: 0;
-  margin-top: 1.6rem;
-  margin-bottom: 1.6rem;
-  padding: 0;
-}
-
-.inline > li {
-  display: inline-block;
-  padding-left: 0.4rem;
-}
-
-dt {
-  font-weight: bold;
-}
-
-dd {
-  margin-bottom: 0.5rem;
-}
-
-hr {
-  position: relative;
-  margin: 1.5rem 0;
-  border: 0;
-  border-top: 1px solid #EEEEEE;
-  border-bottom: 1px solid #FFFFFF;
-}
-
-abbr {
-  font-size: 85%;
-  font-weight: bold;
-  color: #555555;
-  text-transform: uppercase;
-}
-
-abbr[title] {
-  cursor: help;
-  border-bottom: 1px dotted #E5E5E5;
-}
-
-/* Quotes */
-blockquote {
-  padding: 0.5rem 1rem;
-  margin: 0.8rem 0;
-  color: #7A7A7A;
-  border-left: 0.25rem solid #E5E5E5;
-}
-@media (min-width: 30em) {
-  blockquote {
-    padding-right: 5rem;
-    padding-left: 1.25rem;
-  }
-}
-
-blockquote p:last-child {
-  margin-bottom: 0;
-}
-
-.lead {
-  font-size: 1.25rem;
-  font-weight: 300;
-}
+  margin: 0;
+  padding: 0; }
 
 main {
-  max-width: 38rem;
+  position: relative;
+  max-width: 160rem;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
   margin-bottom: -3.6rem;
   margin-left: auto;
   margin-right: auto;
-  min-height: 100%;
-}
+  min-height: 100%; }
 
-main:after {
-  content: '';
-  display: block;
-}
+main::after {
+  content: "";
+  display: block; }
 
 section {
-  text-align: center;
-}
+  position: absolute;
+  bottom: 4.2rem; }
 
-footer,
-main:after {
-  height: 3.6rem;
-}
+footer, main::after {
+  height: 3.6rem; }
 
 footer {
   height: 3.6rem;
   width: 100%;
-  text-align: center;
-}
+  max-width: 160rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem; }
 
 .button,
 button {
@@ -244,19 +140,14 @@ button {
           user-select: none;
   background-image: none;
   background-color: transparent;
-  border: 0.15rem solid #FF4136;
-  border-radius: 1.8rem;
-}
-@media (min-width: 38em) {
-  .button,
-  button {
-    letter-spacing: 0.1rem;
-  }
-}
+  border: .15rem solid #222222;
+  border-radius: 1.8rem; }
+  @media (min-width: 38em) {
+    .button,
+    button {
+      letter-spacing: .1rem; } }
 
-input[type='submit'],
-input[type='reset'],
-input[type='button'] {
+input[type='submit'], input[type='reset'], input[type='button'] {
   display: inline-block;
   padding: 1rem 1.6rem;
   margin-bottom: 0;
@@ -276,74 +167,31 @@ input[type='button'] {
           user-select: none;
   background-image: none;
   background-color: transparent;
-  border: 0.15rem solid #FF4136;
-  border-radius: 1.8rem;
-}
-@media (min-width: 38em) {
-  input[type='submit'],
-  input[type='reset'],
-  input[type='button'] {
-    letter-spacing: 0.1rem;
-  }
-}
+  border: .15rem solid #222222;
+  border-radius: 1.8rem; }
+  @media (min-width: 38em) {
+    input[type='submit'], input[type='reset'], input[type='button'] {
+      letter-spacing: .1rem; } }
 
 .button:hover,
 button:hover {
   text-decoration: none;
-  color: inherit;
-  -webkit-filter: brightness(2);
-          filter: brightness(2);
-}
+  color: inherit; }
 
-input[type='submit']:hover,
-input[type='reset']:hover,
-input[type='button']:hover {
+input[type='submit']:hover, input[type='reset']:hover, input[type='button']:hover {
   text-decoration: none;
-  color: inherit;
-  -webkit-filter: brightness(2);
-          filter: brightness(2);
-}
+  color: inherit; }
 
 .button:focus,
 button:focus {
   text-decoration: none;
   color: inherit;
-  -webkit-filter: brightness(2);
-          filter: brightness(2);
-  outline: 0;
-}
+  outline: 0; }
 
-input[type='submit']:focus,
-input[type='reset']:focus,
-input[type='button']:focus {
+input[type='submit']:focus, input[type='reset']:focus, input[type='button']:focus {
   text-decoration: none;
   color: inherit;
-  -webkit-filter: brightness(2);
-          filter: brightness(2);
-  outline: 0;
-}
-
-@-webkit-keyframes hue {
-  0% {
-    -webkit-filter: hue-rotate(0deg);
-            filter: hue-rotate(0deg);
-  }
-  100% {
-    -webkit-filter: hue-rotate(-360deg);
-            filter: hue-rotate(-360deg);
-  }
-}
-
-@keyframes hue {
-  0% {
-    -webkit-filter: hue-rotate(0deg);
-            filter: hue-rotate(0deg);
-  }
-  100% {
-    -webkit-filter: hue-rotate(-360deg);
-            filter: hue-rotate(-360deg);
-  }
-}
+  outline: 0; }
 
 
 
