--- a/assets/styles/buttons.scss
+++ b/assets/styles/buttons.scss
@@ -15,7 +15,7 @@ button {
   user-select: none;
   background-image: none;
   background-color: transparent;
-  border: .15rem solid #FF4136;
+  border: .15rem solid #222222;
   border-radius: 1.8rem;
 
   @media (min-width: 38em) {
@@ -42,7 +42,7 @@ input {
     user-select: none;
     background-image: none;
     background-color: transparent;
-    border: .15rem solid #FF4136;
+    border: .15rem solid #222222;
     border-radius: 1.8rem;
 
     @media (min-width: 38em) {
@@ -55,7 +55,6 @@ input {
 button:hover {
   text-decoration: none;
   color: inherit;
-  filter: brightness(2);
 }
 
 input {
@@ -64,7 +63,6 @@ input {
   &[type='button']:hover {
     text-decoration: none;
     color: inherit;
-    filter: brightness(2);
   }
 }
 
@@ -72,7 +70,6 @@ input {
 button:focus {
   text-decoration: none;
   color: inherit;
-  filter: brightness(2);
   outline: 0;
 }
 
@@ -82,7 +79,6 @@ input {
   &[type='button']:focus {
     text-decoration: none;
     color: inherit;
-    filter: brightness(2);
     outline: 0;
   }
 }
