--- a/assets/styles/type.scss
+++ b/assets/styles/type.scss
@@ -33,7 +33,7 @@ p {
 }
 
 small {
-  font-size: .8rem;
+  font-size: 90%;
 }
 
 strong {
@@ -42,79 +42,12 @@ strong {
 
 // Lists
 ul, ol, dl {
-  color: #FF4136;
   margin-top: 0;
   margin-bottom: 1rem;
 }
 
-// Custom type
-//
-// Extend lists with `.inline` for inline list item text.
-
-.inline {
+ul, ol {
   list-style: none;
-  margin-left: -.4rem;
-  margin-right: 0;
-  margin-top: 1.6rem;
-  margin-bottom: 1.6rem;
+  margin: 0;
   padding: 0;
-}
-
-.inline > li {
-  display: inline-block;
-  padding-left: .4rem;
-}
-
-dt {
-  font-weight: bold;
-}
-dd {
-  margin-bottom: .5rem;
-}
-
-// Misc
-hr {
-  position: relative;
-  margin: 1.5rem 0;
-  border: 0;
-  border-top: 1px solid #eee;
-  border-bottom: 1px solid #fff;
-}
-
-abbr {
-  font-size: 85%;
-  font-weight: bold;
-  color: #555;
-  text-transform: uppercase;
-}
-abbr[title] {
-  cursor: help;
-  border-bottom: 1px dotted #e5e5e5;
-}
-
-/* Quotes */
-blockquote {
-  padding: .5rem 1rem;
-  margin: .8rem 0;
-  color: #7a7a7a;
-  border-left: .25rem solid #e5e5e5;
-
-  @media (min-width: 30em) {
-    padding-right: 5rem;
-    padding-left: 1.25rem;
-  }
-}
-
-blockquote p:last-child {
-  margin-bottom: 0;
-}
-
-
-// Custom type
-//
-// Extend paragraphs with `.lead` for larger introductory text.
-
-.lead {
-  font-size: 1.25rem;
-  font-weight: 300;
 }
