--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -52,7 +52,8 @@ a {
 }
 
 // Images
-img {
+img,
+picture {
   display: block;
   max-width: 100%;
   margin: 0 auto;
@@ -61,6 +62,22 @@ img {
     display: inline-block;
     max-width: 18rem;
     margin: 0;
+  }
+
+  &.bg {
+    min-height: 100%;
+    min-width: 128rem;
+    width: 100%;
+    height: auto;
+    position: fixed;
+    top: 0;
+    left: 0;
+    opacity: .06;
+
+    @media screen and (max-width: 128rem) {
+      left: 50%;
+      margin-left: -64rem;
+    }
   }
 }
  //Horizontal Row
