--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -37,14 +37,31 @@ a {
     -webkit-transition: .4s;
     transition: .4s; }
 
-img {
+img,
+picture {
   display: block;
   max-width: 100%;
   margin: 0 auto; }
-  img.logo {
+  img.logo,
+  picture.logo {
     display: inline-block;
     max-width: 18rem;
     margin: 0; }
+  img.bg,
+  picture.bg {
+    min-height: 100%;
+    min-width: 128rem;
+    width: 100%;
+    height: auto;
+    position: fixed;
+    top: 0;
+    left: 0;
+    opacity: .06; }
+    @media screen and (max-width: 128rem) {
+      img.bg,
+      picture.bg {
+        left: 50%;
+        margin-left: -64rem; } }
 
 hr {
   border: #FFFF00 solid .6rem;
@@ -106,8 +123,14 @@ main::after {
   display: block; }
 
 section {
-  position: absolute;
-  bottom: 4.2rem; }
+  position: relative;
+  text-align: center;
+  padding-top: 4.2rem; }
+  @media (min-width: 38em) {
+    section {
+      position: absolute;
+      bottom: 4.2rem;
+      padding-top: 0; } }
 
 footer, main::after {
   height: 3.6rem; }
@@ -116,8 +139,16 @@ footer {
   height: 3.6rem;
   width: 100%;
   max-width: 160rem;
+  text-align: center;
+  font-size: .8rem;
+  line-height: 1;
+  line-height: 1.4;
   padding-left: 1.5rem;
   padding-right: 1.5rem; }
+  @media (min-width: 38em) {
+    footer {
+      text-align: left;
+      font-size: 1rem; } }
 
 .button,
 button {
