--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -9,12 +9,8 @@ body {
 
 html {
   font-family: "source-code-pro",sans-serif;
-  font-size: 1.4rem;
-  line-height: 1.8; }
-  @media (min-width: 38em) {
-    html {
-      font-size: 1rem;
-      line-height: 1.4; } }
+  font-size: 1rem;
+  line-height: 1.4; }
 
 body {
   color: #333333;
@@ -26,11 +22,13 @@ body {
 a {
   color: inherit;
   font-weight: 700;
-  letter-spacing: .1rem;
   text-transform: uppercase;
   text-decoration: none;
   -webkit-transition: .4s;
   transition: .4s; }
+  @media screen and (max-width: 38rem) {
+    a {
+      letter-spacing: .1rem; } }
   a:hover, a:focus {
     color: #444444;
     text-decoration: none;
@@ -64,7 +62,8 @@ picture {
         margin-left: -64rem; } }
 
 hr {
-  border: #FFFF00 solid .6rem;
+  border: #FFFF00 solid 0;
+  border-bottom-width: 1.2rem;
   margin: 1.6rem 0; }
 
 h1, h2, h3, h4, h5, h6 {
