bg image & mobile sizing

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -42,9 +42,8 @@ picture {
   margin: 0 auto; }
   img.logo,
   picture.logo {
-    display: inline-block;
     max-width: 18rem;
-    margin: 0; }
+    margin-bottom: 1rem; }
   img.bg,
   picture.bg {
     min-height: 100%;
@@ -62,7 +61,7 @@ picture {
         margin-left: -64rem; } }
 
 hr {
-  border: #FFFF00 solid 0;
+  border: #FFDC00 solid 0;
   border-bottom-width: 1.2rem;
   margin: 1.6rem 0; }
 
